--- a/index.css
+++ b/index.css
@@ -24,7 +24,8 @@ header{
 
 .section-1{
     display: flex;
-    margin-top: 100px;
+    justify-content: center;
+    
 }
 .area-title h3{
     color: #fff;
