--- a/index.css
+++ b/index.css
@@ -149,3 +149,42 @@ width: 65px;
     margin-bottom: 100px;
     flex-direction: column;
 }
+
+.area-form h2{
+    color: #fff;
+    text-align: center;
+}
+.form form{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+.form input{
+    margin-top: 20px;
+    padding-left: 10px;
+    height: 40px;
+    border: none;
+    outline: none;
+
+}
+input::placeholder{
+    color: #000;
+    text-transform: uppercase;
+    
+}
+
+input[type="submit"]{
+    background-color: #1A7993;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #fff;
+    height: 55px;
+    cursor: pointer;
+}
+
+.social h3{
+    color: #fff;
+    font-weight: normal;
+    
+
+}
